loader on sending message + html prettier format

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/style.css">
-    <link rel="icon" type="image/x-icon" href="../assets/images/title_icon.ico">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles/style.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="../assets/images/title_icon.ico"
+    />
     <title>About - Ahmed Amine Es-Selmouni</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav>
-        <a href="./about">About</a>
-        <a href="./projects">Projects</a>
-        <a href="./contact">Contact</a>
-        <a href="../assets/docs/AhmedAmine_Esselmouni_Resume.pdf" target="_blank">Resume</a>
+      <a href="./about">About</a>
+      <a href="./projects">Projects</a>
+      <a href="./contact">Contact</a>
+      <a href="../assets/docs/AhmedAmine_Esselmouni_Resume.pdf" target="_blank"
+        >Resume</a
+      >
     </nav>
 
     <h1 id="me">whoami</h1>
-    <div style="text-align: center;" ><span style="font-size: 2rem;" >Hi! 👋🏼</span></div>
+    <div style="text-align: center">
+      <span style="font-size: 2rem">Hi! 👋🏼</span>
+    </div>
     <div class="tree">
       <ul>
         <li>
@@ -26,12 +34,18 @@
             <li>
               <ul>
                 <!--
-                --><li>Living in St. John's, Canada 🍁</li>
+                -->
+                <li>Living in St. John's, Canada 🍁</li>
               </ul>
-            </li><!--
-            --><li>
+            </li>
+            <!--
+            -->
+            <li>
               Current undergrad 🎓 @
-              <a href="https://mun.ca/" style="font-size: 1.25rem;" target="_blank"
+              <a
+                href="https://mun.ca/"
+                style="font-size: 1.25rem"
+                target="_blank"
                 >MUN</a
               >
               <ul>
@@ -47,34 +61,52 @@
         <li>
           I enjoy
           <ul>
-          <li>Solving problems 🧩</li><!--
-            --><li>
+            <li>Solving problems 🧩</li>
+            <!--
+            -->
+            <li>
               Programming 💻
               <ul>
-                <li>Python 🐍</li><!--
-                --><li>C#</li><!--
-                --><li>Dart 🎯</li>
+                <li>Python 🐍</li>
+                <!--
+                -->
+                <li>C#</li>
+                <!--
+                -->
+                <li>Dart 🎯</li>
               </ul>
-            </li><!--
-            --><li>
+            </li>
+            <!--
+            -->
+            <li>
               Developing
               <ul>
-                <li>Apps 📱</li><!--
-                --><li>Games 🎮</li>
+                <li>Apps 📱</li>
+                <!--
+                -->
+                <li>Games 🎮</li>
               </ul>
-            </li><!--
-            --><li>
+            </li>
+            <!--
+            -->
+            <li>
               Learning
               <ul>
-                <li>Technologies 🌐</li><!--
-                --><li>Frameworks ⚙️</li><!--
-                --><li>New skills 💡</li>
+                <li>Technologies 🌐</li>
+                <!--
+                -->
+                <li>Frameworks ⚙️</li>
+                <!--
+                -->
+                <li>New skills 💡</li>
               </ul>
-            </li><!--
-            --><li>
-              Math 🧮
-            </li><!--
-            --><li>Linux 🐧</li>
+            </li>
+            <!--
+            -->
+            <li>Math 🧮</li>
+            <!--
+            -->
+            <li>Linux 🐧</li>
           </ul>
         </li>
       </ul>
@@ -82,10 +114,22 @@
 
     <div class="about-paragraph">
       <p>
-        I'm Ahmed Amine Es-Selmouni, a dedicated undergraduate student 🎓 pursuing a major in Computer Science 👨‍💻 at <a href="https://mun.ca/" target="_blank" style="font-size: 1.25rem;" >MUN</a >, living in the beautiful city of St. John's, Canada 🍁. My journey is deeply rooted in my love for problem-solving 🧩 and programming 💻, with Python 🐍, C#, and Dart 🎯 being the languages I'm most fluent in. I thrive on developing apps 📱 and games 🎮, constantly seeking out new technologies 🌐 and frameworks ⚙️ to learn. The logical elegance of mathematics captivates me 🧮, and you'll often find me immersed in the world of Linux 🐧, exploring its intricacies. My passion lies in the intersection of learning and creating, where every new skill 💡 is a stepping stone towards building something impactful ✨.
+        I'm Ahmed Amine Es-Selmouni, a dedicated undergraduate student 🎓
+        pursuing a major in Computer Science 👨‍💻 at
+        <a href="https://mun.ca/" target="_blank" style="font-size: 1.25rem"
+          >MUN</a
+        >, living in the beautiful city of St. John's, Canada 🍁. My journey is
+        deeply rooted in my love for problem-solving 🧩 and programming 💻, with
+        Python 🐍, C#, and Dart 🎯 being the languages I'm most fluent in. I
+        thrive on developing apps 📱 and games 🎮, constantly seeking out new
+        technologies 🌐 and frameworks ⚙️ to learn. The logical elegance of
+        mathematics captivates me 🧮, and you'll often find me immersed in the
+        world of Linux 🐧, exploring its intricacies. My passion lies in the
+        intersection of learning and creating, where every new skill 💡 is a
+        stepping stone towards building something impactful ✨.
       </p>
     </div>
 
     <script src="../scripts/nav.js" defer></script>
-</body>
+  </body>
 </html>
