--- a/pages/thankyou.html
+++ b/pages/thankyou.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/style.css">
-    <link rel="icon" type="image/x-icon" href="../assets/images/title_icon.ico">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles/style.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="../assets/images/title_icon.ico"
+    />
     <title>Thank you for your message! - Ahmed Amine Es-Selmouni</title>
-</head>
-<body style="margin: 0; padding: 0;" >
-    <div class="success" align="center" >
-        <h1>Thank you!</h1>
-        <a href="./contact">Go Back</a>
+  </head>
+  <body style="margin: 0; padding: 0">
+    <div class="success" align="center">
+      <h1>Thank you!</h1>
+      <a href="./contact">Go Back</a>
     </div>
-</body>
+  </body>
 </html>
