--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/style.css">
-    <link rel="icon" type="image/x-icon" href="../assets/images/title_icon.ico">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles/style.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="../assets/images/title_icon.ico"
+    />
     <title>Projects - Ahmed Amine Es-Selmouni</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav>
-        <a href="./about">About</a>
-        <a href="./projects">Projects</a>
-        <a href="./contact">Contact</a>
-        <a href="../assets/docs/AhmedAmine_Esselmouni_Resume.pdf" target="_blank">Resume</a>
+      <a href="./about">About</a>
+      <a href="./projects">Projects</a>
+      <a href="./contact">Contact</a>
+      <a href="../assets/docs/AhmedAmine_Esselmouni_Resume.pdf" target="_blank"
+        >Resume</a
+      >
     </nav>
 
     <h1 id="projects">Some of my projects</h1>
     <div align="center" class="project-items"></div>
 
     <h1 class="projects-footer">
-        <span>More on GitHub</span><a href="https://github.com/ahamSel" target="_blank">
-            <img src="../assets/images/github.png" alt="GitHub" width="30" height="30">
-          </a>
+      <span>More on GitHub</span
+      ><a href="https://github.com/ahamSel" target="_blank">
+        <img
+          src="../assets/images/github.png"
+          alt="GitHub"
+          width="30"
+          height="30"
+        />
+      </a>
     </h1>
 
     <script src="../scripts/nav.js" defer></script>
     <script src="../scripts/projects.js" defer></script>
-</body>
+  </body>
 </html>
