--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <link rel="icon" type="image/x-icon" href="./images/title_icon.ico" />
     <title>Portfolio - Ahmed Amine Es-Selmouni</title>
   </head>
-  <body></body>
+  <body>
+    <script src="./scripts/themes.js" defer></script>
+  </body>
 </html>
