--- a/pages/thankyou.html
+++ b/pages/thankyou.html
@@ -17,5 +17,6 @@
       <h1>Thank you!</h1>
       <a href="./contact">Go Back</a>
     </div>
+    <script src="../scripts/themes.js" defer></script>
   </body>
 </html>
