load theme first

--- a/pages/about.html
+++ b/pages/about.html
@@ -11,6 +11,7 @@
       href="../assets/images/title_icon.ico"
     />
     <title>About - Ahmed Amine Es-Selmouni</title>
+    <script src="../scripts/themes.js"></script>
   </head>
   <body>
     <nav>
@@ -122,6 +123,5 @@
     </div>
 
     <script src="../scripts/nav.js" defer></script>
-    <script src="../scripts/themes.js" defer></script>
   </body>
 </html>
