--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,6 +11,7 @@
       href="../assets/images/title_icon.ico"
     />
     <title>Contact - Ahmed Amine Es-Selmouni</title>
+    <script src="../scripts/themes.js"></script>
   </head>
   <body>
     <div class="loading-overlay">
@@ -117,6 +118,5 @@
 
     <script src="../scripts/nav.js" defer></script>
     <script src="../scripts/contact.js" defer></script>
-    <script src="../scripts/themes.js" defer></script>
   </body>
 </html>
