--- a/pages/thankyou.html
+++ b/pages/thankyou.html
@@ -11,12 +11,12 @@
       href="../assets/images/title_icon.ico"
     />
     <title>Thank you for your message! - Ahmed Amine Es-Selmouni</title>
+    <script src="../scripts/themes.js"></script>
   </head>
   <body style="margin: 0; padding: 0">
     <div class="success" align="center">
       <h1>Thank you!</h1>
       <a href="./contact">Go Back</a>
     </div>
-    <script src="../scripts/themes.js" defer></script>
   </body>
 </html>
