--- a/pages/projects.html
+++ b/pages/projects.html
@@ -11,6 +11,7 @@
       href="../assets/images/title_icon.ico"
     />
     <title>Projects - Ahmed Amine Es-Selmouni</title>
+    <script src="../scripts/themes.js"></script>
   </head>
   <body>
     <nav>
@@ -54,6 +55,5 @@
 
     <script src="../scripts/nav.js" defer></script>
     <script src="../scripts/projects.js" defer></script>
-    <script src="../scripts/themes.js" defer></script>
   </body>
 </html>
