new domain _ thankyou page link fix after message

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -97,7 +97,7 @@
       <input
         type="hidden"
         name="_next"
-        value="https://ahamsel.github.io/portfolio/pages/thankyou"
+        value="https://portfolio.ahamsel.com/pages/thankyou"
       />
     </form>
 
