style flash bug

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="icon" type="image/x-icon" href="./images/title_icon.ico" />
     <title>Portfolio - Ahmed Amine Es-Selmouni</title>
+    <script defer src="../scripts/themes.js"></script>
   </head>
   <body>
-    <script src="./scripts/themes.js" defer></script>
   </body>
 </html>
