--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,7 +11,7 @@
       href="../assets/images/title_icon.ico"
     />
     <title>Contact - Ahmed Amine Es-Selmouni</title>
-    <script src="../scripts/themes.js"></script>
+    <script defer src="../scripts/themes.js"></script>
   </head>
   <body>
     <div class="loading-overlay">
