--- a/pages/about.html
+++ b/pages/about.html
@@ -11,7 +11,7 @@
       href="../assets/images/title_icon.ico"
     />
     <title>About - Ahmed Amine Es-Selmouni</title>
-    <script src="../scripts/themes.js"></script>
+    <script defer src="../scripts/themes.js"></script>
   </head>
   <body>
     <nav>
