--- a/pages/thankyou.html
+++ b/pages/thankyou.html
@@ -11,7 +11,7 @@
       href="../assets/images/title_icon.ico"
     />
     <title>Thank you for your message! - Ahmed Amine Es-Selmouni</title>
-    <script src="../scripts/themes.js"></script>
+    <script defer src="../scripts/themes.js"></script>
   </head>
   <body style="margin: 0; padding: 0">
     <div class="success" align="center">
