--- a/pages/projects.html
+++ b/pages/projects.html
@@ -18,9 +18,9 @@
       <a href="./about">About</a>
       <a href="./projects">Projects</a>
       <a href="./contact">Contact</a>
-      <a href="../assets/docs/AhmedAmine_Esselmouni_Resume.pdf" target="_blank"
+      <!-- <a href="../assets/docs/AhmedAmine_Esselmouni_Resume.pdf" target="_blank"
         >Resume</a
-      >
+      > -->
     </nav>
 
     <h1 id="projects">Some of my projects</h1>
