--- a/pages/about.html
+++ b/pages/about.html
@@ -10,7 +10,7 @@
       type="image/x-icon"
       href="../assets/images/title_icon.ico"
     />
-    <title>About - Ahmed Amine Es-Selmouni</title>
+    <title>About - ahamSel</title>
     <script defer src="../scripts/themes.js"></script>
   </head>
   <body>
@@ -30,7 +30,7 @@
     <div class="tree">
       <ul>
         <li>
-          I'm Ahmed Amine Es-Selmouni
+          I'm Ahmed
           <ul>
             <li>
               <ul>
@@ -91,7 +91,7 @@
 
     <div class="about-paragraph">
       <p>
-        I'm Ahmed Amine Es-Selmouni, a dedicated undergraduate student 🎓
+        I'm Ahmed, a dedicated undergraduate student 🎓
         pursuing a major in Computer Science 👨‍💻 at
         <a href="https://mun.ca/" target="_blank" style="font-size: 1.25rem"
           >MUN</a
