--- a/pages/projects.html
+++ b/pages/projects.html
@@ -10,7 +10,7 @@
       type="image/x-icon"
       href="../assets/images/title_icon.ico"
     />
-    <title>Projects - Ahmed Amine Es-Selmouni</title>
+    <title>Projects - ahamSel</title>
     <script defer src="../scripts/themes.js"></script>
   </head>
   <body>
