--- a/pages/thankyou.html
+++ b/pages/thankyou.html
@@ -10,7 +10,7 @@
       type="image/x-icon"
       href="../assets/images/title_icon.ico"
     />
-    <title>Thank you for your message! - Ahmed Amine Es-Selmouni</title>
+    <title>Thank you for your message! - ahamSel</title>
     <script defer src="../scripts/themes.js"></script>
   </head>
   <body style="margin: 0; padding: 0">
