--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,7 +10,7 @@
       type="image/x-icon"
       href="../assets/images/title_icon.ico"
     />
-    <title>Contact - Ahmed Amine Es-Selmouni</title>
+    <title>Contact - ahamSel</title>
     <script defer src="../scripts/themes.js"></script>
   </head>
   <body>
