theme picker fix for mobile view at reminderai

--- a/reminderai.html
+++ b/reminderai.html
@@ -72,6 +72,9 @@
         body {
           padding-top: 5px;
         }
+        .theme-toggle {
+          bottom: 20px;
+        }
       }
     </style>
   </head>
