--- a/apps/privacy-policy/reminderai.html
+++ b/apps/privacy-policy/reminderai.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="../../styles/style.css" />
     <link
       rel="icon"
       type="image/x-icon"
       href="./assets/images/title_icon.ico"
     />
-    <title>Reminderai - ahamSel</title>
-    <script defer src="./scripts/themes.js"></script>
+    <title>Reminderai - Privacy Policy - ahamSel</title>
+    <script defer src="../../scripts/themes.js"></script>
     <style>
       .app-header {
         text-align: center;
@@ -45,7 +45,7 @@
         font-size: 24px;
         color: var(--accent);
       }
-      .app-section p, 
+      .app-section p,
       .app-section li {
         margin-bottom: 15px;
         font-size: 17px;
@@ -84,55 +84,83 @@
     </div>
 
     <div class="app-section">
-      <h2 style="color: var(--accent);">Privacy Policy</h2>
+      <h2 style="color: var(--accent)">Privacy Policy</h2>
       <div class="date-info">
         <span>Effective Date: April 2, 2025</span>
       </div>
 
       <h3>Introduction</h3>
       <p>
-        Welcome to Reminderai. We are committed to protecting your privacy. This Privacy Policy explains our data practices regarding data collection, use, and disclosure.
+        Welcome to Reminderai. We are committed to protecting your privacy. This
+        Privacy Policy explains our data practices regarding data collection,
+        use, and disclosure.
       </p>
 
       <h3>Data Collection and Use</h3>
-      <p>
-        Reminderai is designed with privacy in mind:
-      </p>
+      <p>Reminderai is designed with privacy in mind:</p>
       <ul>
-        <li><strong>Local Storage</strong>: All your reminders, alarms, notes, and preferences are stored locally on your device. We do not collect or store this information on our servers.</li>
-        <li><strong>AI Processing</strong>: When you use the AI feature to create reminders through natural language, your text inputs are temporarily sent to our AI service provider for processing. This data is used solely to interpret your requests and generate appropriate responses for reminder creation.</li>
-        <li><strong>No Advertising or Analytics</strong>: We do not collect any data for advertising purposes or analytics.</li>
+        <li>
+          <strong>Local Storage</strong>: All your reminders, alarms, notes, and
+          preferences are stored locally on your device. We do not collect or
+          store this information on our servers.
+        </li>
+        <li>
+          <strong>AI Processing</strong>: When you use the AI feature to create
+          reminders through natural language, your text inputs are temporarily
+          sent to our AI service provider for processing. This data is used
+          solely to interpret your requests and generate appropriate responses
+          for reminder creation.
+        </li>
+        <li>
+          <strong>No Advertising or Analytics</strong>: We do not collect any
+          data for advertising purposes or analytics.
+        </li>
       </ul>
 
       <h3>Data Storage</h3>
       <p>
-        Your data remains on your device. Uninstalling the app will remove all associated data from your device.
+        Your data remains on your device. Uninstalling the app will remove all
+        associated data from your device.
       </p>
 
       <h3>Third-Party Services</h3>
       <p>
-        Our app uses an AI service to process natural language inputs when you use the AI assistant feature. Only the text you provide to the AI assistant is transmitted to this service, and only for the purpose of generating appropriate responses to your requests.
+        Our app uses an AI service to process natural language inputs when you
+        use the AI assistant feature. Only the text you provide to the AI
+        assistant is transmitted to this service, and only for the purpose of
+        generating appropriate responses to your requests.
       </p>
 
       <h3>User Choices</h3>
       <ul>
-        <li>You can choose to use the manual reminder creation feature instead of the AI assistant, in which case no data will be transmitted outside your device.</li>
-        <li>You can delete any reminders, alarms, or notes at any time within the app.</li>
+        <li>
+          You can choose to use the manual reminder creation feature instead of
+          the AI assistant, in which case no data will be transmitted outside
+          your device.
+        </li>
+        <li>
+          You can delete any reminders, alarms, or notes at any time within the
+          app.
+        </li>
       </ul>
 
       <h3>Children's Privacy</h3>
       <p>
-        Our app is not directed to children under 13, and we do not knowingly collect personal information from children under 13.
+        Our app is not directed to children under 13, and we do not knowingly
+        collect personal information from children under 13.
       </p>
 
       <h3>Changes to This Privacy Policy</h3>
       <p>
-        We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page and updating the effective date.
+        We may update this Privacy Policy from time to time. We will notify you
+        of any changes by posting the new Privacy Policy on this page and
+        updating the effective date.
       </p>
 
       <h3>Contact Us</h3>
       <p>
-        If you have any questions about this Privacy Policy, please contact us at <a href="mailto:ahamconcerns@gmail.com">ahamconcerns@gmail.com</a>.
+        If you have any questions about this Privacy Policy, please contact us
+        at <a href="mailto:ahamconcerns@gmail.com">ahamconcerns@gmail.com</a>.
       </p>
     </div>
 
@@ -153,4 +181,4 @@
 
     <script src="./scripts/nav.js" defer></script>
   </body>
-</html> 
+</html>
