casa privacy policy & account deletion update fix

--- a/apps/account-deletion/casablancabakery.html
+++ b/apps/account-deletion/casablancabakery.html
@@ -140,6 +140,10 @@
         </li>
         <li>Notification tokens associated with your device/account</li>
         <li>Marketing/preference data stored by us</li>
+        <li>
+          Saved payment methods (cards on file) with our payment processor
+          (Square) will be deleted/disabled.
+        </li>
       </ul>
 
       <h3>What we retain</h3>
