account deletion page without .html

--- a/apps/privacy-policy/casablancabakery.html
+++ b/apps/privacy-policy/casablancabakery.html
@@ -163,7 +163,7 @@
           <li><strong>Access/Correction:</strong> contact us.</li>
           <li><strong>Deletion:</strong> email us to request deletion; some records may be retained as required by law.</li>
           <li><strong>Notifications:</strong> turn off in device settings.</li>
-          <li><strong>Account deletion:</strong> see our dedicated page at <a href="../account-deletion/casablancabakery.html">Account Deletion</a>.</li>
+          <li><strong>Account deletion:</strong> see our dedicated page at <a href="../account-deletion/casablancabakery">Account Deletion</a>.</li>
         </ul>
 
         <h3>Account deletion</h3>
