page title icon fix

--- a/apps/privacy-policy/reminderai.html
+++ b/apps/privacy-policy/reminderai.html
@@ -8,7 +8,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="./assets/images/title_icon.ico"
+      href="../../assets/images/title_icon.ico"
     />
     <title>Reminderai - Privacy Policy - ahamSel</title>
     <script defer src="../../scripts/themes.js"></script>
