--- a/apps/account-deletion/casablancabakery.html
+++ b/apps/account-deletion/casablancabakery.html
@@ -8,7 +8,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="./assets/images/title_icon.ico"
+      href="../../assets/images/title_icon.ico"
     />
     <title>Casablanca Bakery — Account Deletion - ahamSel</title>
     <script defer src="../../scripts/themes.js"></script>
